SERVER-99611 Return a helpful error message for malformed geo legacy point (#39442)

GitOrigin-RevId: 13b73b1f3e4c6fd8bea171aaeb497f966f63181e